# mamaQt

./: CMakeLists.txt  README.md  app.pro  baza.h  main.cpp  x86_64-w64-mingw32-toolcahin.cmake
.qt/: QtDeploySupport.cmake
